Fixed scrollbar issue in doc

--- a/public/custom.css
+++ b/public/custom.css
@@ -80,7 +80,7 @@ body {
   padding: 9px 0;
 }
 .text-input{
-  width:100%;
+  width:95%;
   border:none;
   background:transparent;
   height:100%;
